@@ -121,7 +121,8 @@
 	<TR class="dark">
 		<TD width="100%" class="fall" align="left" COLSPAN="4" nowrap>
 			<A HREF="javascript:setWarnings(1);"><IMG SRC="img/warningon.gif">{t}Enable Warnings for All{/t}</A>&nbsp;
-			<A HREF="javascript:setWarnings(0);"><IMG SRC="img/warningoff.gif">{t}Disable Warnings for All{/t}</A>
+			<A HREF="javascript:setWarnings(0);"><IMG SRC="img/warningoff.gif">{t}Disable Warnings for All{/t}</A>&nbsp;
+			<A HREF="?m=customerwarn&search=1"><IMG SRC="img/mail.gif">{t}Set Message{/t}</A>
 		</TD>
 	</TR>
 	{/if}
